[package]
name = "to_do-axtix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async runtime
tokio = { version = "^1.20", features = ["full"] }

# web framework
actix-web = "^4"
actix-cors = "^0.6"

# .env file management
dotenv = "^0.15"

# logging
log = "^0.4"
pretty_env_logger = "0.4.0"

# error handling
thiserror = "^1.0"

# time
chrono = { version = "^0.4", features = ["serde"] }

# mongodb Driver
mongodb = "2.3.0"
futures = "0.3"

# Serialize and Deserialize Data Structures
serde = { version = "^1", features = ["derive"] }

# macros from enums and strings
strum = { version = "^0.24", features = ["derive"] }
strum_macros = "^0.24"
